force-app/main/default/objects/Transaction_Card__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>מספר חשבונית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>