force-app/main/default/objects/Transaction_Card__c/fields/Israeli_client__c.field-meta.xml
<CustomField>
    <fullName>Israeli_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if the client is Israeli if checked.
If not checked, the client is foreign</description>
    <label>Israeli client</label>
    <type>Checkbox</type>
</CustomField>