force-app/main/default/objects/Transaction_Card__c/fields/Kibutzim__c.field-meta.xml
<CustomField>
    <fullName>Kibutzim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>משקי הקיבוצים</label>
    <type>Checkbox</type>
</CustomField>