force-app/main/default/objects/Transaction_Card__c/fields/lithium__c.field-meta.xml
<CustomField>
    <fullName>lithium__c</fullName>
    <defaultValue>1</defaultValue>
    <label>כמות סוללות ליתיום</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>