force-app/main/default/objects/Transaction_Card__c/fields/Manager_Code__c.field-meta.xml
<CustomField>
    <fullName>Manager_Code__c</fullName>
    <description>קוד של מנהל החנות</description>
    <label>קוד מנהל</label>
    <length>255</length>
    <type>Text</type>
</CustomField>