force-app/main/default/objects/Transaction_Card__c/fields/Manual_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Manual_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עסקה ידנית</label>
    <type>Checkbox</type>
</CustomField>