force-app/main/default/objects/Transaction_Card__c/fields/Maximum_Allowed_Num_Payments__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Allowed_Num_Payments__c</fullName>
    <label>Maximum Allowed Num Payments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>