force-app/main/default/objects/Transaction_Card__c/fields/Membership_Extension__c.field-meta.xml
<CustomField>
    <fullName>Membership_Extension__c</fullName>
    <formula>&quot;https://magnusafety.com/product/magnus-membership-service-extension/?transaction_card_id=&quot;&amp;Id&amp;&quot;&amp;end_date=&quot;&amp;TEXT(Period_end__c + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Extension</label>
    <type>Text</type>
</CustomField>