force-app/main/default/objects/Transaction_Card__c/fields/MIG_CLIENT__c.field-meta.xml
<CustomField>
    <fullName>MIG_CLIENT__c</fullName>
    <label>הערות על לקוח נודד</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>