force-app/main/default/objects/Transaction_Card__c/fields/MIG_CLIENT_chk__c.field-meta.xml
<CustomField>
    <fullName>MIG_CLIENT_chk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>לקוח נודד</label>
    <type>Checkbox</type>
</CustomField>