force-app/main/default/objects/Transaction_Card__c/fields/Myanmar__c.field-meta.xml
<CustomField>
    <fullName>Myanmar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>בורמה</label>
    <type>Checkbox</type>
</CustomField>