force-app/main/default/objects/Transaction_Card__c/fields/Mzongo__c.field-meta.xml
<CustomField>
    <fullName>Mzongo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מזונגו</label>
    <type>Checkbox</type>
</CustomField>