force-app/main/default/objects/Transaction_Card__c/fields/Nicaragua__c.field-meta.xml
<CustomField>
    <fullName>Nicaragua__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ניקרגואה</label>
    <type>Checkbox</type>
</CustomField>