force-app/main/default/objects/Transaction_Card__c/fields/No_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Payments__c</fullName>
    <label>מספר תשלומים בפועל(מכשיר)</label>
    <summaryFilterItems>
        <field>Payment__c.VAT_payment__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Parent_Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>