force-app/main/default/objects/Transaction_Card__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>הערה חדשה</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>