force-app/main/default/objects/Transaction_Card__c/fields/Number_Of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Payments__c</fullName>
    <label>תשלומים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>