force-app/main/default/objects/Transaction_Card__c/fields/NunberPassword__c.field-meta.xml
<CustomField>
    <fullName>NunberPassword__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>NunberPassword</label>
    <type>AutoNumber</type>
</CustomField>