force-app/main/default/objects/Transaction_Card__c/fields/Old_Transaction_Card__c.field-meta.xml
<CustomField>
    <fullName>Old_Transaction_Card__c</fullName>
    <label>Old Transaction Card</label>
    <length>18</length>
    <type>Text</type>
</CustomField>