force-app/main/default/objects/Transaction_Card__c/fields/Online_Registration_Form__c.field-meta.xml
<CustomField>
    <fullName>Online_Registration_Form__c</fullName>
    <label>קישור לטופס ההרשמה המקוון</label>
    <type>Url</type>
</CustomField>