force-app/main/default/objects/Transaction_Card__c/fields/Online_Registration_Form_link__c.field-meta.xml
<CustomField>
    <fullName>Online_Registration_Form_link__c</fullName>
    <formula>&quot;https://magnus.secure.force.com/AssemblyVF?id=&quot;+Id</formula>
    <label>קישור לטופס הרשמה מכוון</label>
    <type>Text</type>
</CustomField>