force-app/main/default/objects/Transaction_Card__c/fields/Original_Transaction_Card__c.field-meta.xml
<CustomField>
    <fullName>Original_Transaction_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Transaction Card</label>
    <referenceTo>Transaction_Card__c</referenceTo>
    <relationshipLabel>Original Transaction Card</relationshipLabel>
    <relationshipName>OriginalTransactionCard</relationshipName>
    <type>Lookup</type>
</CustomField>