force-app/main/default/objects/Transaction_Card__c/fields/Other_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Other_Insurance_Company__c</fullName>
    <inlineHelpText>For clients with a different insurance company</inlineHelpText>
    <label>Insurance - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>