force-app/main/default/objects/Transaction_Card__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <description>MagnuSafety - This field will be populated upon creation, the emails will be sent to this address.</description>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>