force-app/main/default/objects/Transaction_Card__c/fields/Passenger_Id__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Id__c</fullName>
    <formula>Account_Passenger__r.Passenger_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>הנוסע-ת.זהות</label>
    <type>Text</type>
</CustomField>