force-app/main/default/objects/Transaction_Card__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <formula>TRIM(UPPER(LEFT(Account_Passenger__r.FirstName, 1))+UPPER(LEFT(Account_Passenger__r.LastName, 1))+LOWER(LEFT(Account_Passenger__r.FirstName, 1))+ LOWER(LEFT(Account_Passenger__r.LastName, 1))+     MID(Name, FIND(&apos;-&apos;, Name)+1  , LEN(Name)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סיסמא</label>
    <type>Text</type>
</CustomField>