force-app/main/default/objects/Transaction_Card__c/fields/PasswordFormula__c.field-meta.xml
<CustomField>
    <fullName>PasswordFormula__c</fullName>
    <formula>&quot;-&quot; + Form_Password__c + &quot;-&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סיסמה</label>
    <type>Text</type>
</CustomField>