force-app/main/default/objects/Transaction_Card__c/fields/Payee_id__c.field-meta.xml
<CustomField>
    <fullName>Payee_id__c</fullName>
    <label>ת.ז</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>