force-app/main/default/objects/Transaction_Card__c/fields/payment_calculator__c.field-meta.xml
<CustomField>
    <fullName>payment_calculator__c</fullName>
    <formula>IF(
    CreditAmount__c &gt; 140,
    IF(
        Days_Of_Service_Up_To_Date__c &lt; 181,
        ((Days_Of_Service_Up_To_Date__c - actual_days_of_service__c) * Step_Price1__c * (1 - discount__c) * USD_to_ILS__c),
        IF(
            actual_days_of_service__c &lt; 181,
            (((181 - actual_days_of_service__c) * Step_Price1__c) + ((Days_Of_Service_Up_To_Date__c - 181) * Step_Price2__c)) * USD_to_ILS__c * (1 - discount__c),
            (Days_Of_Service_Up_To_Date__c - actual_days_of_service__c) * Step_Price2__c * (1 - discount__c) * USD_to_ILS__c
        )
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>חישוב זיכוי</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>