force-app/main/default/objects/Transaction_Card__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <defaultValue>1</defaultValue>
    <label>תשלומים</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>