force-app/main/default/objects/Transaction_Card__c/fields/Period_end__c.field-meta.xml
<CustomField>
    <fullName>Period_end__c</fullName>
    <description>The end of the Usage period</description>
    <label>Period end</label>
    <type>Date</type>
</CustomField>