force-app/main/default/objects/Transaction_Card__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>The beginning of the Usage period</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>