force-app/main/default/objects/Transaction_Card__c/fields/Pickup_in_Natbag__c.field-meta.xml
<CustomField>
    <fullName>Pickup_in_Natbag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>איסוף בנתב&quot;ג</label>
    <type>Checkbox</type>
</CustomField>