force-app/main/default/objects/Transaction_Card__c/fields/Pickup_Store__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Store__c</fullName>
    <description>הסניף שממנו נאסף המכשיר</description>
    <label>סניף איסוף</label>
    <length>255</length>
    <type>Text</type>
</CustomField>