force-app/main/default/objects/Transaction_Card__c/fields/Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time__c</fullName>
    <label>שעת איסוף</label>
    <type>Time</type>
</CustomField>