force-app/main/default/objects/Transaction_Card__c/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <label>מספר פוליסה</label>
    <length>17</length>
    <type>Text</type>
</CustomField>