force-app/main/default/objects/Transaction_Card__c/fields/powerbank__c.field-meta.xml
<CustomField>
    <fullName>powerbank__c</fullName>
    <label>מטענים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>