force-app/main/default/objects/Transaction_Card__c/fields/Prefered_Device__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Device__c</fullName>
    <label>מכשיר להכנה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>