force-app/main/default/objects/Transaction_Card__c/fields/Price_Per_Days_2__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Days_2__c</fullName>
    <formula>IF( OR( ISPICKVAL(Device__c , &quot;מכשיר A&quot;) ,  ISPICKVAL(Device__c , &quot;A - מטיילים בארץ&quot;) ,  ISPICKVAL(Device__c , &quot;A - מטיילים בחול&quot;)), 1.5,
IF( OR( ISPICKVAL(Device__c , &quot;מכשיר SE+&quot;) ,  ISPICKVAL(Device__c , &quot;SE+ - מטיילים בארץ&quot;) ,  ISPICKVAL(Device__c , &quot;SE+ - מטיילים בחול&quot;)), 2,
IF( OR( ISPICKVAL(Device__c , &quot;מכשיר mini&quot;) ,  ISPICKVAL(Device__c , &quot;MINI - מטיילים בחול&quot;) ,  ISPICKVAL(Device__c , &quot;MINI - מטיילים בארץ&quot;)), 2.5,
IF( OR( ISPICKVAL(Device__c , &quot;MINI 2&quot;) ,  ISPICKVAL(Device__c , &quot;MINI2 - מטיילים בחול&quot;) ,  ISPICKVAL(Device__c , &quot;MINI2 - מטיילים בארץ&quot;)), 3
,0
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מחיר מדרגה 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>