force-app/main/default/objects/Transaction_Card__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>updates product type according to product ID</description>
    <formula>If  (Product_ID__c  = &quot;5265&quot; , &quot;Personal Membership&quot; , If (Product_ID__c = &quot;5312&quot; , &quot;Family Membership&quot; , If (Product_ID__c = &quot;5693&quot; , &quot;Extend Personal Membership&quot; , If (Product_ID__c = &quot;5720&quot; , &quot;Extend Family Membership&quot; , &quot;False Product ID&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>