force-app/main/default/objects/Transaction_Card__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>תוכנית</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Magnus Basic</fullName>
            </value>
            <value>
                <fullName>Magnus Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>