force-app/main/default/objects/Transaction_Card__c/fields/Purchase_Store__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Store__c</fullName>
    <description>IP של הסניף שממנו נרכש המכשיר</description>
    <label>סניף רכישה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>