force-app/main/default/objects/Transaction_Card__c/fields/Rec_Bat_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rec_Bat_Amount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rec Bat Amount</label>
    <type>Checkbox</type>
</CustomField>