force-app/main/default/objects/Transaction_Card__c/fields/Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount__c</fullName>
    <label>סכום שהתקבל</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>