force-app/main/default/objects/Transaction_Card__c/fields/Record_Type_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name_Text__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name Text</label>
    <type>Text</type>
</CustomField>