force-app/main/default/objects/Transaction_Card__c/fields/Registration_Fees__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>דמי הרשמה</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>