force-app/main/default/objects/Transaction_Card__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <formula>IF(ISBLANK(Return_Date_Updated__c),Scheduled_Return_Date__c ,Return_Date_Updated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תאריך חזרה מתוכנן/מעודכן</label>
    <type>Date</type>
</CustomField>