force-app/main/default/objects/Transaction_Card__c/fields/Return_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Return_Date_Updated__c</fullName>
    <label>תאריך החזרה מעודכן</label>
    <type>Date</type>
</CustomField>