force-app/main/default/objects/Transaction_Card__c/fields/Return_in_Natbag__c.field-meta.xml
<CustomField>
    <fullName>Return_in_Natbag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>החזרה בנתב&quot;ג</label>
    <type>Checkbox</type>
</CustomField>