force-app/main/default/objects/Transaction_Card__c/fields/Return_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Return_Weekday__c</fullName>
    <formula>IF ( OR ( (MOD(Scheduled_Return_Date__c - DATE(1900, 1, 6), 7)=0), 
(MOD(Scheduled_Return_Date__c - DATE(1900, 1, 6), 7)=6), 
(MOD(Return_Date_Updated__c - DATE(1900, 1, 6), 7)=0), 
(MOD(Return_Date_Updated__c - DATE(1900, 1, 6), 7)=6)), &quot;Weekend&quot;, &quot;Weekday&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Weekday</label>
    <type>Text</type>
</CustomField>