force-app/main/default/objects/Transaction_Card__c/fields/Returning__c.field-meta.xml
<CustomField>
    <fullName>Returning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>לקוח חוזר</label>
    <type>Checkbox</type>
</CustomField>