force-app/main/default/objects/Transaction_Card__c/fields/Rikushet__c.field-meta.xml
<CustomField>
    <fullName>Rikushet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>לקוח ריקושט</label>
    <type>Checkbox</type>
</CustomField>