force-app/main/default/objects/Transaction_Card__c/fields/Rikushet_Refund__c.field-meta.xml
<CustomField>
    <fullName>Rikushet_Refund__c</fullName>
    <label>זיכוי בסניף ריקושט</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>