force-app/main/default/objects/Transaction_Card__c/fields/Safe_Code__c.field-meta.xml
<CustomField>
    <fullName>Safe_Code__c</fullName>
    <formula>if(
MONTH( Date_Of_Delivery_Device__c ) &gt;9,
&apos;00&apos;+text(MONTH( Date_Of_Delivery_Device__c )),
&apos;000&apos;+text(MONTH( Date_Of_Delivery_Device__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Code</label>
    <type>Text</type>
</CustomField>