force-app/main/default/objects/Transaction_Card__c/fields/SafeBox_Num__c.field-meta.xml
<CustomField>
    <fullName>SafeBox_Num__c</fullName>
    <label>מספר כספת</label>
    <length>10</length>
    <type>Text</type>
</CustomField>