force-app/main/default/objects/Transaction_Card__c/fields/Satdesk__c.field-meta.xml
<CustomField>
    <fullName>Satdesk__c</fullName>
    <formula>Text(Card_Device__r.Satdesk__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satdesk</label>
    <type>Text</type>
</CustomField>