force-app/main/default/objects/Transaction_Card__c/fields/Scheduled_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Return_Date__c</fullName>
    <label>תאריך החזרה מתוכנן</label>
    <type>Date</type>
</CustomField>