force-app/main/default/objects/Transaction_Card__c/fields/Seller_Code__c.field-meta.xml
<CustomField>
    <fullName>Seller_Code__c</fullName>
    <description>קוד המוכר של מי שביצע את עסקת המכירה</description>
    <label>קוד מוכר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>