force-app/main/default/objects/Transaction_Card__c/fields/Send_For_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_For_Approval_Date__c</fullName>
    <label>תאריך העברה לאישור</label>
    <type>Date</type>
</CustomField>