force-app/main/default/objects/Transaction_Card__c/fields/Send_Manually_Expiry_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Manually_Expiry_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be checked as TRUE by the sales team, when selected as TRUE, it will send the expiry email again.</description>
    <inlineHelpText>Marking the field will send the Expiry email to the Email</inlineHelpText>
    <label>Send Manually Expiry Email</label>
    <type>Checkbox</type>
</CustomField>