force-app/main/default/objects/Transaction_Card__c/fields/Send_Manually_Onboarding_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Manually_Onboarding_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be checked as TRUE by the sales team, when selected as TRUE, it will send the onboarding email again.</description>
    <inlineHelpText>Marking the field will send the Onboarding email to the &apos;Owner Email&apos;</inlineHelpText>
    <label>Send Manually Onboarding Email</label>
    <type>Checkbox</type>
</CustomField>