force-app/main/default/objects/Transaction_Card__c/fields/Service_Evaluation_Form__c.field-meta.xml
<CustomField>
    <fullName>Service_Evaluation_Form__c</fullName>
    <label>טופס הארכת שירות</label>
    <type>Url</type>
</CustomField>