force-app/main/default/objects/Transaction_Card__c/fields/Shovar__c.field-meta.xml
<CustomField>
    <fullName>Shovar__c</fullName>
    <label>שובר</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>