force-app/main/default/objects/Transaction_Card__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>חתימת מקבל המכשיר</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>