force-app/main/default/objects/Transaction_Card__c/fields/Sinai__c.field-meta.xml
<CustomField>
    <fullName>Sinai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>סיני</label>
    <type>Checkbox</type>
</CustomField>