force-app/main/default/objects/Transaction_Card__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>מקור הגעה</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>טלפון</fullName>
            </value>
            <value>
                <fullName>אינטרנט</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>