force-app/main/default/objects/Transaction_Card__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדש</fullName>
                <default>true</default>
                <label>חדש</label>
            </value>
            <value>
                <fullName>מילוי טופס</fullName>
            </value>
            <value>
                <fullName>דרוש עידוד</fullName>
            </value>
            <value>
                <fullName>מחכה לאישור טופס</fullName>
            </value>
            <value>
                <fullName>טופס מאושר</fullName>
            </value>
            <value>
                <fullName>הועבר תשלום</fullName>
            </value>
            <value>
                <fullName>הכנת מכשיר</fullName>
            </value>
            <value>
                <fullName>מכשיר מוכן</fullName>
            </value>
            <value>
                <fullName>מסירת מכשיר</fullName>
            </value>
            <value>
                <fullName>טיול</fullName>
            </value>
            <value>
                <fullName>בטיול - נפאל</fullName>
            </value>
            <value>
                <fullName>הארכת טיול</fullName>
            </value>
            <value>
                <fullName>החזרת מכשיר</fullName>
            </value>
            <value>
                <fullName>הסתיים</fullName>
            </value>
            <value>
                <fullName>לא מעוניין</fullName>
            </value>
            <value>
                <fullName>הארכת שירות</fullName>
            </value>
            <value>
                <fullName>צריך לזכות</fullName>
            </value>
            <value>
                <fullName>חיובים בעייתיים</fullName>
            </value>
            <value>
                <fullName>ייעוץ משפחה</fullName>
            </value>
            <value>
                <fullName>בהמתנה למכשיר</fullName>
            </value>
            <value>
                <fullName>לא במלאי</fullName>
            </value>
            <value>
                <fullName>החזרה באיחור</fullName>
            </value>
            <value>
                <fullName>ממתין לאיסוף בנתב&quot;ג</fullName>
            </value>
            <value>
                <fullName>החזרה מנתב&quot;ג</fullName>
            </value>
            <value>
                <fullName>לגבות תשלום נתב&quot;ג</fullName>
            </value>
            <value>
                <fullName>מכשיר נשלח לנתב&quot;ג</fullName>
            </value>
            <value>
                <fullName>בהקפאה - זיכוי</fullName>
            </value>
            <value>
                <fullName>הוזמן משלוח להחזרה HFD</fullName>
            </value>
            <value>
                <fullName>בוטל</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>