force-app/main/default/objects/Transaction_Card__c/fields/Step_Price1__c.field-meta.xml
<CustomField>
    <fullName>Step_Price1__c</fullName>
    <label>מחיר מדרגה 1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>