force-app/main/default/objects/Transaction_Card__c/fields/Step_Price2__c.field-meta.xml
<CustomField>
    <fullName>Step_Price2__c</fullName>
    <label>מחיר מדרגה 2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>