force-app/main/default/objects/Transaction_Card__c/fields/Step_Price3__c.field-meta.xml
<CustomField>
    <fullName>Step_Price3__c</fullName>
    <label>מחיר מדרגה 3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>