force-app/main/default/objects/Transaction_Card__c/fields/Step_Size2__c.field-meta.xml
<CustomField>
    <fullName>Step_Size2__c</fullName>
    <label>גודל מדרגה 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>