force-app/main/default/objects/Transaction_Card__c/fields/Store_IP__c.field-meta.xml
<CustomField>
    <fullName>Store_IP__c</fullName>
    <description>The IP of the store that the device was purchased from</description>
    <label>Store_IP</label>
    <type>TextArea</type>
</CustomField>