force-app/main/default/objects/Transaction_Card__c/fields/Submit2__c.field-meta.xml
<CustomField>
    <fullName>Submit2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit2</label>
    <type>Checkbox</type>
</CustomField>