force-app/main/default/objects/Transaction_Card__c/fields/TAaveler_phone__c.field-meta.xml
<CustomField>
    <fullName>TAaveler_phone__c</fullName>
    <formula>Account_Passenger__r.Phone</formula>
    <label>טלפון נוסע</label>
    <type>Text</type>
</CustomField>