force-app/main/default/objects/Transaction_Card__c/fields/TAaveler_phone_formula__c.field-meta.xml
<CustomField>
    <fullName>TAaveler_phone_formula__c</fullName>
    <formula>IF( BEGINS(TAaveler_phone__c, &quot;0&quot;) , 

&quot;+972&quot; +  Right(
 SUBSTITUTE(TAaveler_phone__c, &quot;-&quot; , &quot;&quot;)  ,  LEN(
 SUBSTITUTE(TAaveler_phone__c, &quot;-&quot; , &quot;&quot;)  ) - 1  )   , &quot;+972&quot; +  
 SUBSTITUTE(TAaveler_phone__c, &quot;-&quot; , &quot;&quot;)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>טלפון מלא</label>
    <type>Text</type>
</CustomField>