force-app/main/default/objects/Transaction_Card__c/fields/Terms_conditions_accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_conditions_accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הסכים לתנאי השירות</label>
    <type>Checkbox</type>
</CustomField>