force-app/main/default/objects/Transaction_Card__c/fields/test_for_omri__c.field-meta.xml
<CustomField>
    <fullName>test_for_omri__c</fullName>
    <label>test for omri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>