force-app/main/default/objects/Transaction_Card__c/fields/The_Actual_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>The_Actual_Return_Date__c</fullName>
    <label>תאריך החזרה בפועל</label>
    <type>Date</type>
</CustomField>