force-app/main/default/objects/Transaction_Card__c/fields/Token_Id__c.field-meta.xml
<CustomField>
    <fullName>Token_Id__c</fullName>
    <label>Token Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>