force-app/main/default/objects/Transaction_Card__c/fields/TookFine__c.field-meta.xml
<CustomField>
    <fullName>TookFine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TookFine</label>
    <type>Checkbox</type>
</CustomField>