force-app/main/default/objects/Transaction_Card__c/fields/TotalValueBat__c.field-meta.xml
<CustomField>
    <fullName>TotalValueBat__c</fullName>
    <label>עלות בטריות כוללת</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>