force-app/main/default/objects/Transaction_Card__c/fields/Track_s__c.field-meta.xml
<CustomField>
    <fullName>Track_s__c</fullName>
    <label>Track(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>