force-app/main/default/objects/Transaction_Card__c/fields/Trade_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_Number__c</fullName>
    <label>מספר עסקה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>