force-app/main/default/objects/Transaction_Card__c/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <formula>Trainings__r.Date_Time__c</formula>
    <label>מועד הדרכה</label>
    <type>DateTime</type>
</CustomField>