force-app/main/default/objects/Transaction_Card__c/fields/Trainings__c.field-meta.xml
<CustomField>
    <fullName>Trainings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>הדרכה</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Trainings__c.NumberOfStudents__c</field>
            <operation>lessThan</operation>
            <valueField>Trainings__c.Max_Students__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Trainings__c</referenceTo>
    <relationshipLabel>כרטיס עסקה</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>