force-app/main/default/objects/Transaction_Card__c/fields/Transaction_expected_num_payments__c.field-meta.xml
<CustomField>
    <fullName>Transaction_expected_num_payments__c</fullName>
    <defaultValue>1</defaultValue>
    <label>מס&apos; תשלומים בעסקה</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>