force-app/main/default/objects/Transaction_Card__c/fields/Transaction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Start_Date__c</fullName>
    <label>תאריך התחלה לתשלום</label>
    <type>Date</type>
</CustomField>