force-app/main/default/objects/Transaction_Card__c/fields/Traveller_name__c.field-meta.xml
<CustomField>
    <fullName>Traveller_name__c</fullName>
    <label>Traveller name</label>
    <length>252</length>
    <type>Text</type>
</CustomField>